# medical_data_management

./: .gitignore  README.md  medical_db_build.sql  medical_db_erd.vuerd
database_interface/: .env  Cargo.toml  README.md
database_interface/src/: db_lib.rs  main.rs
egfr_calculator/: Cargo.toml
egfr_calculator/src/: main.rs
query_builder/: Cargo.toml
query_builder/src/: main.rs
