[package]
name = "database_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes" ] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sqlx = { version = "0.7", features = [ "runtime-async-std", "mysql", "chrono" ] }
